--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:26510599933:ios:6eb34bea931956acad0094",
-  "FIREBASE_PROJECT_ID": "cmsc23-c5l-ajhao",
-  "GCM_SENDER_ID": "26510599933"
+  "GOOGLE_APP_ID": "1:1067833453561:ios:c72f4b85f2eb010e912b28",
+  "FIREBASE_PROJECT_ID": "cmsc23-todo-app-gademdem-c4l",
+  "GCM_SENDER_ID": "1067833453561"
 }
